Edit some test file